# apps/libs/api-client-go/api/openapi.yaml
@@ -6097,10 +6097,8 @@ components:
       enum:
       - creating
       - ready
-      - pending_create
-      - pending_delete
-      - deleting
-      - deleted
+      - destroying
+      - destroyed
       - error
       type: string
     VolumeDto:
